Updated photo file path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="20">
-    <td> <img src="marcy.jpg" alt="Lydia's Profile Picture" style="width: 200px; height: 250px;">
+    <td> <img src="./marcy.jpg" alt="Lydia's Profile Picture" style="width: 200px; height: 250px;">
     </td>
     <td>
       <h1>Lydia Page</h1>
