Added additional styling and updated content.

--- a/hobbies.html
+++ b/hobbies.html
@@ -3,20 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h3>My Hobbies</h3>
+    <h1>My Hobbies</h1>
     <ol type="i">
-      <li>Reading Great Books</li>
       <li>
-        Binging Podcasts
+        <h4>Reading</h4>
       </li>
+      <p>Here are three facts about me: <br />
+        My mom worked as a librarian in an elementary school. <br />
+        I have a degree in Literature. <br />
+        My first username was Bookworm110.</p>
+        <p>Obviously, reading is an important part of my life.
+          I typically read three books at a time: one physical book I read at home, one eBook for my commutes on the train, and one audiobook for the rest of the time.
+        My favorite genres are literary fiction, literary nonfiction, scientific nonfiction, a good psychological thriller, and anything that makes me gasp in surprise or delight.
+      My favorite book is <em>Rebecca</em> by Daphne du Maurier.</p>
       <li>
-        Hanging out with Marcy
+        <h4>Binging Podcasts</h4>
       </li>
+      <p>
+        I'm a huge fan of podcasts, especially if they make me laugh or feel particularly tender-hearted.
+        I listen to the NPR podcasts "It's Been a Minute with Sam Sanders," "Life Kit," and "Code Switch."
+        From WNYC, I'm a fan of "Death, Sex, and Money," "The Anthropocene Reviewed," and "Dear Hank and John."
+        The Maxfun Network releases several of my favorites, including "Sawbones," and "My Brother, My Brother, and Me."
+      </p>
       <li>
-        Sitting on the couch with Daniel
+        <h4>Hanging out with Marcy</h4>
       </li>
+      <p>My dog is one of the best people I know. She's a real goofball who makes me laugh all the time.</p>
+      <li>
+        <h4>Having fun with Daniel</h4>
+      </li>
+      <p>Daniel makes me happy, whether we're on a new adventure or sitting together on the couch. He's my favorite boy.</p>
     </ol>
+
+    <p><a href="index.html">Click here</a> to return to the home page.</p>
   </body>
 </html>
