--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Lydia's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -12,7 +13,7 @@
     </td>
     <td>
       <h1>Lydia Page</h1>
-      <p><em>Educational Technologist at <strong><a href="https://www.nyu.edu/">New York University</a></strong>.</em></p>
+      <p><em>Educational Technologist at <strong>New York University</strong>.</em></p>
       <p>
         I am an Instructional Designer and Educational Technologist with over six years of professional experience. I partner with subject matter experts to design challenging and rewarding online learning experiences for motivated adult students.
         Most
@@ -26,7 +27,7 @@
   <h3>Education</h3>
   <ul>
     <li>Master of Arts, Rhetoric and Composition, Deparment of English, <strong>
-        <a href="https://www.colostate.edu/" target="_blank">Colorado State University</a>
+        Colorado State University
       </strong></li>
     <ul>
       <li>
@@ -38,11 +39,9 @@
         Writing Award: <em>Angry Feminist Killjoy</em>
       </li>
     </ul>
-    <li>Bachelor of Arts, English Literature, <a href="http://english.colostate.edu/" target="_blank">Department of English</a>, <strong>Colorado State University</strong></li>
+    <li>Bachelor of Arts, English Literature, Department of English, <strong>Colorado State University</strong></li>
     <ul>
-      <li>A thing I did</li>
-      <li>Other notable achievement here</li>
-      <li>A Great Award</li>
+      <li>Women's Studies Minor</li>
     </ul>
   </ul>
   <hr>
@@ -68,27 +67,30 @@
     </tbody>
   </table>
   <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <hr>
+
   <h3>Skills</h3>
-<table cellspacing="10">
+  <table cellspacing="10">
     <tr>
-      <td>Reading</td>
+      <td>Instructional Design</td>
       <td>⭐️⭐️⭐️⭐️⭐️</td>
     </tr>
     <tr>
-      <td>Exercising</td>
-      <td>⭐️⭐️⭐️</td>
+      <td>eAuthoring Tools</td>
+      <td>⭐️⭐️⭐️⭐️</td>
     </tr>
     <tr>
-      <td>Cooking</td>
-      <td>⭐️⭐️⭐️</td>
+      <td>Learning Management Systems</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
     </tr>
     <tr>
-      <td>Writing</td>
+      <td>Project Management</td>
       <td>⭐️⭐️⭐️⭐️⭐️</td>
     </tr>
   </table>
+  <hr>
+  <h3>My Hobbies</h3>
+  <p><a href="hobbies.html">Click here</a> to learn a bit more about what I like to do in my down time!</p>
+
 
 
 
