--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Contact Info</title>
-  </head>
-  <body>
-<h1>Let's Chat</h1>
-    <p>
-      Please address all inquiries to:
-      <br /><strong>Lydia Page</strong>
-      <br />Blue Room
-      <br />Top of the Building
-      <br />Washington Square Park Row Houses
-      <br />New York City
-      <br />New York State
-      <br />USA
-      <br />Earth
-      </p>
-<hr>
-<form action="mailto:lydiapage7@gmail.com" method="post" enctype="text/plain">
-  <label for="yourName">Your Name:</label>
-  <input type="text"> <br>
-  <label for="yourEmail">Your Email:</label>
-  <input type="email"> <br>
-  <label for="yourMessage">Your Message:</label>
-  <textarea name="Message" rows="8" cols="80"></textarea> <br>
-  <input type="submit">
-</form>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Contact Info</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+  <h1>Let's Chat</h1>
+  <p>
+    Please address all snail-mail inquiries to: <br />
+    <br /><strong>Lydia Page</strong>
+    <br />Blue Room
+    <br />Top of the Building
+    <br />Washington Square Park Row Houses
+    <br />New York, New York
+  </p>
+  <p>Or, leave me a message below:</p>
+  <hr>
+  <form action="mailto:lydiapage7@gmail.com" method="post" enctype="text/plain">
+    <label for="yourName">Your Name:</label>
+    <input type="text"> <br>
+    <label for="yourEmail">Your Email:</label>
+    <input type="email"> <br>
+    <textarea name="Message" rows="8" cols="80" placeholder="Write your message here."></textarea> <br>
+    <input type="submit">
+  </form>
+  <hr>
+  <p><a href="index.html">Click here</a> to return to the home page.</p>
+</body>
+
 </html>
